@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-10T08:20:52Z",
+  "timestamp" : "2024-01-10T16:21:55Z",
   "count_outdated" : 6056,
   "uniques_outdated" : 2176,
-  "count" : 6322,
+  "count" : 6323,
   "uniques" : 2360,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2024-01-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
